# lib/api-spec/openapi.yaml
@@ -471,6 +471,10 @@ components:
           type: ["string", "null"]
         nameEn:
           type: ["string", "null"]
+        facebookUrl:
+          type: ["string", "null"]
+        instagramUrl:
+          type: ["string", "null"]
         sportsCategory:
           type: string
         location:
@@ -534,6 +538,10 @@ components:
         nameZh:
           type: ["string", "null"]
         nameEn:
+          type: ["string", "null"]
+        facebookUrl:
+          type: ["string", "null"]
+        instagramUrl:
           type: ["string", "null"]
         sportsCategory:
           type: string
@@ -625,6 +633,10 @@ components:
         nameZh:
           type: string
         nameEn:
+          type: string
+        facebookUrl:
+          type: string
+        instagramUrl:
           type: string
         sportsCategory:
           type: string
